# causal-graph-mcp

./: .gitignore  README.md  pyproject.toml
src/causal_graph_mcp/: __init__.py  __main__.py  cross_language.py  graph.py  indexer.py  language.py  parser.py  python_parser.py  resolver.py  risk.py  server.py  storage.py  ts_parser.py  visualize.py  watcher.py
tests/: test_graph.py  test_indexer.py  test_integration.py  test_multi_language.py  test_parser.py  test_resolver.py  test_risk.py  test_server.py  test_storage.py  test_visualize.py  test_watcher.py
