[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "causal-graph-mcp"
version = "0.2.0"
description = "MCP server that indexes multi-language codebases into a causal dependency graph"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "jedi",
    "watchdog",
    "tree-sitter",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
causal-graph-mcp = "causal_graph_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/causal_graph_mcp"]
